:memo::white_check_mark: Roleのenumにguestを追加
